--- a/pages/camino.html
+++ b/pages/camino.html
@@ -281,12 +281,20 @@
                 </h3>  
                 <article class="carousel_article espaciado">
                     <div class="swiper mySwiper carousel_container">
+                        <div id="card" class="swiper-slide card_masServicios">
+                            <div class="dp_masServicios">
+                                <h3 class="card_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
+                                <div class="contenedor_btn_card">
+                                    <a href="../pages/marca.html" class="btn_card">Ver servicio</a>          
+                                </div>
+                            </div>
+                        </div>
                         <div class="swiper-wrapper carousel_content">
                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO DE IDENTIDAD VISUAL</h3>
                                     <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
+                                        <a href="../pages/visual.html" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
                             </div>
@@ -294,26 +302,18 @@
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO WEB</h3>
                                     <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
+                                        <a href="../pages/web.html" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
                             </div>
-                            <div id="card" class="swiper-slide card_masServicios">
-                                <div class="dp_masServicios">
-                                    <h3 class="card_title">PACK CAMINO DIGITAL</h3>
-                                    <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
-                                    </div>
-                                </div>
-                            </div>
-                            <div id="card" class="swiper-slide card_masServicios">
+<!--                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO ONG's</h3>
                                     <div class="contenedor_btn_card">
                                         <a href="#" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO DE REDES</h3>
