--- a/pages/marca.html
+++ b/pages/marca.html
@@ -49,10 +49,10 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2H4089REM"></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'G-W2H4089REM');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-W2H4089REM');
         </script>
     </head>
     <body>
@@ -293,7 +293,7 @@
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO DE IDENTIDAD VISUAL</h3>
                                     <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
+                                        <a href="../pages/visual.html" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
                             </div>
@@ -301,7 +301,7 @@
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO WEB</h3>
                                     <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
+                                        <a href="../pages/web.html" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
                             </div>
@@ -309,18 +309,18 @@
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">PACK CAMINO DIGITAL</h3>
                                     <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
+                                        <a href="../pages/camino.html" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
                             </div>
-                            <div id="card" class="swiper-slide card_masServicios">
+<!--                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO ONG's</h3>
                                     <div class="contenedor_btn_card">
                                         <a href="#" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO DE REDES</h3>
