--- a/pages/visual.html
+++ b/pages/visual.html
@@ -291,9 +291,9 @@
                         <div class="swiper-wrapper carousel_content">
                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
-                                    <h3 class="card_title">IMPULSO DE IDENTIDAD VISUAL</h3>
+                                    <h3 class="card_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
                                     <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
+                                        <a href="../pages/marca.html" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
                             </div>
@@ -301,7 +301,7 @@
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO WEB</h3>
                                     <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
+                                        <a href="../pages/web.html" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
                             </div>
@@ -309,18 +309,18 @@
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">PACK CAMINO DIGITAL</h3>
                                     <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
+                                        <a href="../pages/camino.html" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
                             </div>
-                            <div id="card" class="swiper-slide card_masServicios">
+<!--                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO ONG's</h3>
                                     <div class="contenedor_btn_card">
                                         <a href="#" class="btn_card">Ver servicio</a>          
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">IMPULSO DE REDES</h3>
