--- a/pages/web.html
+++ b/pages/web.html
@@ -49,10 +49,10 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2H4089REM"></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'G-W2H4089REM');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-W2H4089REM');
         </script>
     </head>
     <body>
@@ -500,5 +500,6 @@
             }
         );
         </script>    
+        <script type="text/javascript" src="../js/navbarBlue.js"></script>
     </body>
 </html>
