--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@
     <!-- Scripts propios-->
     <script type="text/javascript" src="./js/hiddenNav.js"></script>
     <script type="text/javascript" src="./js/anchordNavIndex.js"></script>
+  
     <!-- Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Swipper-->
@@ -737,5 +738,6 @@
         }
       );
     </script>
+        <script type="text/javascript" src="./js/cambioNavbar.js"></script>  
   </body>
 </html>
