--- a/pages/camino.html
+++ b/pages/camino.html
@@ -475,5 +475,6 @@
             }
         );
         </script>    
+        <script type="text/javascript" src="../js/navbarBlue.js"></script>
     </body>
 </html>
