--- a/pages/visual.html
+++ b/pages/visual.html
@@ -482,5 +482,6 @@
             }
         );
         </script>    
+        <script type="text/javascript" src="../js/navbarBlue.js"></script>
     </body>
 </html>
