--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- Analytics-->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -62,7 +60,7 @@
         <div id="particles-js" class="particles"></div>
         <div id="contenedor_logo_header" class="contenedor_logo_header">
           <a class="anchord_logo" href="index.html">
-            <img class="logo_header" src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions">
+            <img loading="lazy" class="logo_header" src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions">
           </a>
         </div>
         <input type="checkbox" id="toggler">
@@ -137,7 +135,7 @@
         <article class="cardsImpulsos_container">
           <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-1">
             <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Identidad de Marca" class="img_impulso">      
+              <img loading="lazy" src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Identidad de Marca" class="img_impulso">      
             </div>
             <div id="containerSpeachImpulsoMarca" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
@@ -156,7 +154,7 @@
           </div>
           <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-2">
             <div id="contenedorImagenImpulsoVisual" class="contenedor_impulso_img">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Identidad Visual" class="img_impulso">      
+              <img loading="lazy" src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Identidad Visual" class="img_impulso">      
             </div>
             <div id="containerParagraphImpulsoVisual" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD VISUAL </h3>
@@ -175,7 +173,7 @@
           </div>
           <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-3">
             <div id="contenedorImagenImpulsoWeb" class="contenedor_impulso_img">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Web - Páginas Web" class="img_impulso">   
+              <img loading="lazy" src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Web - Páginas Web" class="img_impulso">   
             </div>
             <div id="containerParagraphImpulsoWeb" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
@@ -199,7 +197,7 @@
           </h2>
           <div id="containerCaminoDigital" class="container_content_caminoDigital wow animate__animated animate__fadeInLeft delay-1">
             <div id="contenedorImagenCaminoDigital" class="caminoDigital_container_img">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Pack Camino Digital" class="caminoDigital_img">      
+              <img loading="lazy" src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Pack Camino Digital" class="caminoDigital_img">      
             </div>
             <div id="caminoDigitalContainerSpeach" class="caminoDigital_container_speach">
               <h3 class=" h3 caminoDigital_title">PACK CAMINO DIGITAL</h3>
@@ -512,7 +510,7 @@
               ¿Te contamos un secreto? Tenemos una alianza estratégica que identifica proyectos de interés para otorgarles financiamiento e invertir en ellos
             </p>
             <div id="hashtagContainer" class="nosotros_mision_hashtag_container">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" class="hashtagRocket"></img>
+              <img loading="lazy" src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" class="hashtagRocket"></img>
               <h3 class="nosotros_mision_hashtag"> <span>#</span> IMPULSAR</p>
             </div> 
           </div>            
@@ -637,7 +635,7 @@
                   <div class="container">
                       <!-- Footer Logo -->                         
                       <a class="footer__logo" href="">
-                          <img src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions" class="footer__logo">
+                          <img loading="lazy" src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions" class="footer__logo">
                       </a>
                   </div>
               </div>
@@ -717,8 +715,7 @@
     </footer>     
     <!-- Scripts propios-->
     <script type="text/javascript" src="./js/hiddenNav.js"></script>
-    <script type="text/javascript" src="./js/anchordNavIndex.js"></script>
-  
+    <script type="text/javascript" src="./js/anchordNavIndex.js"></script>  
     <!-- Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Swipper-->
