--- a/pages/camino.html
+++ b/pages/camino.html
@@ -60,8 +60,8 @@
             <div id="particles-js" class="particles"></div>
             <nav id="navbar" class="">
                 <div id="contenedor_logo_header" class="contenedor_logo_header">
-                    <a class="anchord_logo" href="../index.html">
-                    <img class="logo_header" src="../assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions">
+                    <a class="anchord_logo" href="../index.html#index_header">
+                        <img class="logo_header" src="../assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions">
                     </a>
                 </div>
                 <input type="checkbox" id="toggler">
@@ -72,7 +72,7 @@
                 </label>
                 <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
                     <ul id="navList" class="list">
-                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#indexMain">Inicio</a></li>
+                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#index_header">Inicio</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Qué ofrecemos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionNosotros">¿Quiénes somos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionContacto">Contacto</a></li>
