--- a/pages/web.html
+++ b/pages/web.html
@@ -72,7 +72,7 @@
                 </label>
                 <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
                     <ul id="navList" class="list">
-                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#indexMain">Inicio</a></li>
+                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#index_header">Inicio</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Qué ofrecemos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionNosotros">¿Quiénes somos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionContacto">Contacto</a></li>
