--- a/pages/camino.html
+++ b/pages/camino.html
@@ -413,7 +413,7 @@
                                 <i class="bi bi-geo-alt"></i> Olegario V. Andrade 315, Mendoza, Argentina
                             </p></li>
                             <li><p>
-                                <i class="bi bi-envelope"></i> contacto@impulsardev.comar
+                                <i class="bi bi-envelope"></i> contacto@impulsardev.com.ar
                             </p></li>
                             <li>
                             <p>
