--- a/pages/marca.html
+++ b/pages/marca.html
@@ -244,7 +244,7 @@
                             </a>
                         </div>
                     </div>
-                    <form action="https://formspree.io/f/xoqrplko" id="contactoFormulario" class="contacto_formulario" method="post" enctype="">
+                    <form action="https://formspree.io/f/xoqrplko" id="formularioMarca" class="contacto_formulario" method="post" enctype="">
                         <div id="formularioContenedorDatos" class="formulario_contenedor_datos">
                             <div class="mb-3 separador-leve contenedor_inputs">
                                 <label for="email" name="_replyto" class="form-label">Email</label>
@@ -420,7 +420,7 @@
                                 <i class="bi bi-geo-alt"></i> Olegario V. Andrade 315, Mendoza, Argentina
                             </p></li>
                             <li><p>
-                                <i class="bi bi-envelope"></i> contacto@impulsardev.comar
+                                <i class="bi bi-envelope"></i> contacto@impulsardev.com.ar
                             </p></li>
                             <li>
                             <p>
