Colores particulares para cada servicio

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           Contamos con tres servicios que se conectan y juntos, garantizan el proceso necesario para construir una marca sólida que destaque en el mercado y que te impulse para <span>ATRAER</span>, <span>CONECTAR</span> y <span>VENDER</span>.
         </p>
         <article class="cardsImpulsos_container">
-          <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-1">
+          <div id="impulsoMarca" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-1">
             <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
               <img loading="lazy" src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Identidad de Marca" class="img_impulso">      
             </div>
@@ -152,7 +152,7 @@
               </div>
             </div>
           </div>
-          <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-2">
+          <div id="impulsoVisual" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-2">
             <div id="contenedorImagenImpulsoVisual" class="contenedor_impulso_img">
               <img loading="lazy" src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Identidad Visual" class="img_impulso">      
             </div>
@@ -171,7 +171,7 @@
               </div>
             </div>      
           </div>
-          <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-3">
+          <div id="impulsoWeb" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-3">
             <div id="contenedorImagenImpulsoWeb" class="contenedor_impulso_img">
               <img loading="lazy" src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Web - Páginas Web" class="img_impulso">   
             </div>
