--- a/pages/web.html
+++ b/pages/web.html
@@ -97,7 +97,7 @@
         </header>
         <main>
             <section class="masServicios_section_intro">
-                <article class="masServicios_intro_content">
+                <article id="masServiciosIntroContentWeb" class="masServicios_intro_content">
                     <h1 class="h1 masServicios_title">
                         IMPULSO WEB
                     </h1>
@@ -105,7 +105,7 @@
                         DESARROLLÁ LA PÁGINA WEB DE TU MARCA Y DALE ESE IMPUSLO PARA DESTACAR EN EL MERCADO.
                     </p>
                 </article>
-                <article class="masServicios_speach">
+                <article id="masServiciosSpeachWeb" class="masServicios_speach">
                     <div class="masServicios_brindamos">
                         <h2 class="h3 masServicios_title">
                             VAS A LLEVARTE
@@ -241,7 +241,7 @@
                     </div>
 
                 </article>
-                <article class="masServicios_formulario">
+                <article id="masServiciosFormWeb" class="masServicios_formulario">
                     <h3 class="h3 masServicios_title">
                         CONTACTAR
                     </h3>
@@ -262,7 +262,7 @@
                             </a>
                         </div>
                     </div>
-                    <form action="https://formspree.io/f/xoqrplko" id="contactoFormulario" class="contacto_formulario" method="post" enctype="">
+                    <form action="https://formspree.io/f/xoqrplko" id="formularioWeb" class="contacto_formulario" method="post" enctype="">
                         <div id="formularioContenedorDatos" class="formulario_contenedor_datos">
                             <div class="mb-3 separador-leve contenedor_inputs">
                                 <label for="email" name="_replyto" class="form-label">Email</label>
@@ -288,7 +288,7 @@
                         </div>
                     </form>
                 </article> 
-                <article class="masServicios_calendly">
+                <article id="masServiciosCalendlyWeb" class="masServicios_calendly">
                     <h3 class="h3 masServicios_title">
                         AGENDAR UN ENCUENTRO
                     </h3>
@@ -296,15 +296,15 @@
                         <iframe  src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%234285F4&ctz=America%2FArgentina%2FMendoza&showTz=0&showCalendars=0&showTabs=0&showDate=0&showTitle=0&showPrint=0&title=AGENDAR%20UN%20ENCUENTRO&src=Y29udGFjdG9AaW1wdWxzYXJkZXYuY29tLmFy&src=Y181dGN2YTVxajNvM3BhcGdndGtmbmFvaGttMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%23F09300&color=%23F09300" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no">
                         </iframe>  
                         <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza">
-                            <h4 class="h6">Hacé click aquí para agendar tu encuentro</h4>
+                            <h4 class="h6">Click para agendar tu encuentro</h4>
                             <i class="bi bi-arrow-up-short"></i>
                         </a>
                     </div>  
                 </article>           
-                <h3 class="h3 masServicios_title">
+                <h3 id="masServiciosTitleWeb" class="h3 masServicios_title">
                     MÁS SERVICIOS
                 </h3>  
-                <article class="carousel_article espaciado">
+                <article id="masServiciosCarouselWeb" class="carousel_article espaciado">
                     <div class="swiper mySwiper carousel_container">
                         <div class="swiper-wrapper carousel_content">
                             <div id="card" class="swiper-slide card_masServicios">
