--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </article>
         <article class="caminoDigital_container" id="caminoDigitalContainer">
           <h2 id="sectionServiciosTitle" class="h2 section_servicios_title wow animate__animated animate__fadeInLeft">
-            ¡CONTECTÁ LOS TRES IMPULSOS EN UN ÚNICO CAMINO DIGITAL!
+            ¡CONECTÁ LOS TRES IMPULSOS EN UN ÚNICO CAMINO DIGITAL!
           </h2>
           <div id="containerCaminoDigital" class="container_content_caminoDigital wow animate__animated animate__fadeInLeft delay-1">
             <div id="contenedorImagenCaminoDigital" class="caminoDigital_container_img">
@@ -555,7 +555,7 @@
       <section id="sectionContacto" class="section_contacto">
         <hr id="contactoHr">
         <h2 id="contactoTitle" class="h2">
-          CONTACTO
+          CONTACTATE CON EL EQUIPO
         </h2>
         <article class="contacto_redes_container">
           <div class="contacto_redes">
