--- a/pages/visual.html
+++ b/pages/visual.html
@@ -225,7 +225,7 @@
                 </article>
                 <article id="masServiciosFormVisual" class="masServicios_formulario">
                     <h3 class="h3 masServicios_title">
-                        CONTACTAR
+                        CONTACTATE CON EL EQUIPO
                     </h3>
                     <div class="contacto_redes_container">
                         <div class="contacto_redes">
