--- a/pages/camino.html
+++ b/pages/camino.html
@@ -218,7 +218,7 @@
                 </article>
                 <article class="masServicios_formulario">
                     <h3 class="h3 masServicios_title">
-                        CONTACTAR
+                        CONTACTATE CON EL EQUIPO
                     </h3>
                     <div class="contacto_redes_container">
                         <div class="contacto_redes">
