--- a/pages/web.html
+++ b/pages/web.html
@@ -243,7 +243,7 @@
                 </article>
                 <article id="masServiciosFormWeb" class="masServicios_formulario">
                     <h3 class="h3 masServicios_title">
-                        CONTACTAR
+                        CONTACTATE CON EL EQUIPO
                     </h3>
                     <div class="contacto_redes_container">
                         <div class="contacto_redes">
