Cambios en datos

--- a/pages/marca.html
+++ b/pages/marca.html
@@ -256,7 +256,7 @@
                             </div>
                             <div class="mb-3 separador-leve contenedor_inputs">
                                 <label for="telefono" class="form-label">Teléfono</label>
-                                <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" placeholder="+5492612481549"><br>
+                                <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" placeholder="+549 2616307131"><br>
                             </div>
                             </div>
                             <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
@@ -399,10 +399,10 @@
                                 <a href="../index.html#indexMain">Inicio</a>
                             </p></li>
                             <li><p>
-                                <a href="../index.html#sectionNosotros">¿Quiénes somos?</a>
+                                <a href="../index.html#sectionServicios">¿Cómo lo hacemos?</a>
                             </p></li>
                             <li><p>
-                                <a href="../index.html#sectionServicios">¿Qué ofrecemos?</a>
+                                <a href="../index.html#sectionNosotros">¿Quiénes somos?</a>
                             </p></li>
                             <li><p>
                                 <a href="../index.html#sectionContacto">Contacto</a>
@@ -412,20 +412,19 @@
                     <!-- linea -->    
                     <hr class="clearfix w-100 d-md-none">    
                     <!-- Grid column Contacto-->
-                    <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">    
+                    <div id="footerDatos" class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">    
                         <!-- Contact details -->
                         <h5 class="font-weight-bold text-uppercase mb-4">Contacto</h5>    
                         <ul class="list-unstyled">
                             <li><p>
                                 <i class="bi bi-geo-alt"></i> Olegario V. Andrade 315, Mendoza, Argentina
                             </p></li>
-                            <li><p>
+                            <li><a href="mailto:contacto@impulsardev.com.ar" target="_blank">
                                 <i class="bi bi-envelope"></i> contacto@impulsardev.com.ar
-                            </p></li>
-                            <li>
-                            <p>
-                                <i class="bi bi-telephone"></i> + 54 261 630-6131</p>
-                            </li>
+                            </a></li>
+                            <li><a href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank">
+                                <i class="bi bi-telephone"></i> +549 261 630-7131
+                            </a></li>
                         </ul>
                     </div>
                     <!-- linea -->    
@@ -460,7 +459,7 @@
                 </a>
             </div>
             <!-- Cierra Copyright -->
-        </footer>     
+        </footer>      
         <!-- Scripts propios-->
         <script type="text/javascript" src="../js/hiddenNav.js"></script>
         <!-- Script Bootstrap-->
