--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'G-W2H4089REM');
+      gtag('config', 'UA-227709876-1');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-227709876-1">
     </script>
   </head>
   <body>
