Cambios navbar, footer, delete calendar. Se incorpora linkedin & facebook

--- a/pages/visual.html
+++ b/pages/visual.html
@@ -90,6 +90,10 @@
                         <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
                         <i class="fa fa-brands fa-whatsapp"></i>  
                         </a>
+                        <!-- Linkedin -->
+                        <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="socialMedia_anchord" target="_blank">
+                            <i class="fa fa-brands fa-linkedin"></i> 
+                        </a>                            
                     </div>
                     </ul>
                 </div>
@@ -242,6 +246,10 @@
                             <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="contacto_redes_anchord">
                                 <i class="fa fa-brands fa-whatsapp"></i>  
                             </a>
+                            <!-- Linkedin -->
+                            <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="contacto_redes_anchord" target="_blank"> 
+                                <i class="fa fa-brands fa-linkedin"></i> 
+                            </a>                            
                         </div>
                     </div>
                     <form action="https://formspree.io/f/xoqrplko" id="formularioVisual" class="contacto_formulario" method="post" enctype="">
@@ -269,19 +277,6 @@
                             </div>
                         </div>
                     </form>
-                </article> 
-                <article id="masServiciosCalendlyVisual" class="masServicios_calendly">
-                    <h3 class="h3 masServicios_title">
-                        AGENDAR UN ENCUENTRO
-                    </h3>
-                    <div class="container_calendar">
-                        <iframe  src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%234285F4&ctz=America%2FArgentina%2FMendoza&showTz=0&showCalendars=0&showTabs=0&showDate=0&showTitle=0&showPrint=0&title=AGENDAR%20UN%20ENCUENTRO&src=Y29udGFjdG9AaW1wdWxzYXJkZXYuY29tLmFy&src=Y181dGN2YTVxajNvM3BhcGdndGtmbmFvaGttMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%23F09300&color=%23F09300" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no">
-                        </iframe>  
-                        <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza">
-                            <h4 class="h6">Click para agendar tu encuentro</h4>
-                            <i class="bi bi-arrow-up-short"></i>
-                        </a>
-                    </div>  
                 </article>           
                 <h3 id="masServiciosTitleVisual" class="h3 masServicios_title">
                     MÁS SERVICIOS
@@ -447,6 +442,10 @@
                             <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
                                 <i class="fa fa-brands fa-whatsapp"></i>  
                             </a>
+                            <!-- Linkedin -->
+                            <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="socialMedia_anchord" target="_blank"> 
+                                <i class="fa fa-brands fa-linkedin"></i> 
+                            </a>                            
                         </div>
                     </div>
                 </div>
