--- a/pages/web.html
+++ b/pages/web.html
@@ -67,13 +67,13 @@
                 <input type="checkbox" id="toggler">
                 <label for="toggler" class="contenedor_burgerMenu">
                     <div id="burgerMenu" class="center">
-                    <div id="burgerMenuDiv"></div>
+                        <div id="burgerMenuDiv"></div>
                     </div>
                 </label>
                 <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
                     <ul id="navList" class="list">
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#index_header">Inicio</a></li>
-                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Qué ofrecemos?</a></li>
+                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Cómo lo hacemos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionNosotros">¿Quiénes somos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionContacto">Contacto</a></li>
                     <div class="socialMedia">
@@ -90,6 +90,10 @@
                         <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
                         <i class="fa fa-brands fa-whatsapp"></i>  
                         </a>
+                        <!-- Linkedin -->
+                        <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="socialMedia_anchord" target="_blank">
+                            <i class="fa fa-brands fa-linkedin"></i> 
+                        </a>                        
                     </div>
                     </ul>
                 </div>
@@ -260,6 +264,10 @@
                             <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="contacto_redes_anchord">
                                 <i class="fa fa-brands fa-whatsapp"></i>  
                             </a>
+                            <!-- Linkedin -->
+                            <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="contacto_redes_anchord" target="_blank"> 
+                                <i class="fa fa-brands fa-linkedin"></i> 
+                            </a>                            
                         </div>
                     </div>
                     <form action="https://formspree.io/f/xoqrplko" id="formularioWeb" class="contacto_formulario" method="post" enctype="">
@@ -287,20 +295,7 @@
                             </div>
                         </div>
                     </form>
-                </article> 
-                <article id="masServiciosCalendlyWeb" class="masServicios_calendly">
-                    <h3 class="h3 masServicios_title">
-                        AGENDAR UN ENCUENTRO
-                    </h3>
-                    <div class="container_calendar">
-                        <iframe  src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%234285F4&ctz=America%2FArgentina%2FMendoza&showTz=0&showCalendars=0&showTabs=0&showDate=0&showTitle=0&showPrint=0&title=AGENDAR%20UN%20ENCUENTRO&src=Y29udGFjdG9AaW1wdWxzYXJkZXYuY29tLmFy&src=Y181dGN2YTVxajNvM3BhcGdndGtmbmFvaGttMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%23F09300&color=%23F09300" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no">
-                        </iframe>  
-                        <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza">
-                            <h4 class="h6">Click para agendar tu encuentro</h4>
-                            <i class="bi bi-arrow-up-short"></i>
-                        </a>
-                    </div>  
-                </article>           
+                </article>         
                 <h3 id="masServiciosTitleWeb" class="h3 masServicios_title">
                     MÁS SERVICIOS
                 </h3>  
@@ -464,6 +459,10 @@
                             <!-- Whatsapp -->
                             <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
                                 <i class="fa fa-brands fa-whatsapp"></i>  
+                            </a>
+                            <!-- Linkedin -->
+                            <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="socialMedia_anchord" target="_blank"> 
+                                <i class="fa fa-brands fa-linkedin"></i> 
                             </a>
                         </div>
                     </div>
