--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li><a id="anchordNavContacto" class="anchord_secciones" href="#sectionContacto">Contacto</a></li>
             <div class="socialMedia">
               <!-- Facebook -->
-              <a href="" type="button" class="socialMedia_anchord" target="_blank">
+              <a href="https://www.facebook.com/Impulsar-Dev-Solutions-104718528937843" type="button" class="socialMedia_anchord" target="_blank">
                 <i class="fa fa-facebook"></i>
               </a>
               <!-- Instagram -->
@@ -92,6 +92,10 @@
               <!-- Whatsapp -->
               <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
                 <i class="fa fa-brands fa-whatsapp"></i>  
+              </a>
+              <!-- Linkedin -->
+              <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="socialMedia_anchord" target="_blank">
+                <i class="fa fa-brands fa-linkedin"></i> 
               </a>
           </div>
           </ul>
@@ -564,17 +568,21 @@
         <article class="contacto_redes_container">
           <div class="contacto_redes">
             <!-- Facebook -->
-            <a href="" type="button" class="contacto_redes_anchord">
+            <a href="https://www.facebook.com/Impulsar-Dev-Solutions-104718528937843" type="button" class="contacto_redes_anchord" target="_blank">
               <i class="fa fa-facebook"></i>
             </a>
             <!-- Instagram -->
-            <a href="https://instagram.com/impulsardev?igshid=YmMyMTA2M2Y=" type="button" class="contacto_redes_anchord">
+            <a href="https://instagram.com/impulsardev?igshid=YmMyMTA2M2Y=" type="button" class="contacto_redes_anchord" target="_blank">
               <i class="fa fa-brands fa-instagram"></i>
             </a>
             </a>
             <!-- Whatsapp -->
-            <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="contacto_redes_anchord">
+            <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="contacto_redes_anchord" target="_blank">
               <i class="fa fa-brands fa-whatsapp"></i>  
+            </a>
+            <!-- Linkedin -->
+            <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="contacto_redes_anchord" target="_blank"> 
+              <i class="fa fa-brands fa-linkedin"></i> 
             </a>
           </div>
         </article>
@@ -609,18 +617,6 @@
             </div>
           </div>
         </form>
-        <article class="contacto_calendly">
-          <h4 class="h4 contacto_calendly_title">AGENDAR UN ENCUENTRO</h4>
-          <div class="container_calendar">
-            <iframe  src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%234285F4&ctz=America%2FArgentina%2FMendoza&showTz=0&showCalendars=0&showTabs=0&showDate=0&showTitle=0&showPrint=0&title=AGENDAR%20UN%20ENCUENTRO&src=Y29udGFjdG9AaW1wdWxzYXJkZXYuY29tLmFy&src=Y181dGN2YTVxajNvM3BhcGdndGtmbmFvaGttMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%23F09300&color=%23F09300" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no">
-            </iframe>  
-            <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza">
-              <h4 class="h6">Hacé click aquí para agendar tu encuentro</h4>
-              <i class="bi bi-arrow-up-short"></i>
-            </a>
-            
-          </div>      
-        </article>
       </section>
       <section id="sectionWhatsapp">
         <a href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank">
@@ -701,6 +697,10 @@
                       <!-- Whatsapp -->
                       <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
                         <i class="fa fa-brands fa-whatsapp"></i>  
+                      </a>
+                      <!-- Linkedin -->
+                      <a href="https://www.linkedin.com/in/impulsar-dev-solutions-030bb3240/" type="button" class="socialMedia_anchord" target="_blank"> 
+                        <i class="fa fa-brands fa-linkedin"></i> 
                       </a>
                   </div>
               </div>
