--- a/pages/web.html
+++ b/pages/web.html
@@ -78,7 +78,7 @@
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionContacto">Contacto</a></li>
                     <div class="socialMedia">
                         <!-- Facebook -->
-                        <a href="" type="button" class="socialMedia_anchord" target="_blank">
+                        <a href="https://www.facebook.com/Impulsardev/" type="button" class="socialMedia_anchord" target="_blank">
                         <i class="fa fa-facebook"></i>
                         </a>
                         <!-- Instagram -->
@@ -448,7 +448,7 @@
                         <h5 class="font-weight-bold text-uppercase mb-4">Redes</h5>            
                         <div class="socialMedia">
                             <!-- Facebook -->
-                            <a href="" type="button" class="socialMedia_anchord" target="_blank">
+                            <a href="https://www.facebook.com/Impulsardev/" type="button" class="socialMedia_anchord" target="_blank">
                                 <i class="fa fa-facebook"></i>
                             </a>
                             <!-- Instagram -->
